--- a/ch01/nock01.ipynb
+++ b/ch01/nock01.ipynb
@@ -2,134 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "0a9e41cf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/keitaakutsu/.pyenv/versions/3.8.12/lib/python3.8/site-packages/pandas/compat/__init__.py:124: UserWarning: Could not import the lzma module. Your installed Python is incomplete. Attempting to use lzma compression will result in a RuntimeError.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "61daddfd",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>customer_id</th>\n",
-       "      <th>customer_name</th>\n",
-       "      <th>registration_date</th>\n",
-       "      <th>customer_name_kana</th>\n",
-       "      <th>email</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>age</th>\n",
-       "      <th>birth</th>\n",
-       "      <th>pref</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>IK152942</td>\n",
-       "      <td>平田 裕次郎</td>\n",
-       "      <td>2019-01-01 00:25:33</td>\n",
-       "      <td>ひらた ゆうじろう</td>\n",
-       "      <td>hirata_yuujirou@example.com</td>\n",
-       "      <td>M</td>\n",
-       "      <td>29</td>\n",
-       "      <td>1990/6/10</td>\n",
-       "      <td>石川県</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>TS808488</td>\n",
-       "      <td>田村 詩織</td>\n",
-       "      <td>2019-01-01 01:13:45</td>\n",
-       "      <td>たむら しおり</td>\n",
-       "      <td>tamura_shiori@example.com</td>\n",
-       "      <td>F</td>\n",
-       "      <td>33</td>\n",
-       "      <td>1986/5/20</td>\n",
-       "      <td>東京都</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>AS834628</td>\n",
-       "      <td>久野 由樹</td>\n",
-       "      <td>2019-01-01 02:00:14</td>\n",
-       "      <td>ひさの ゆき</td>\n",
-       "      <td>hisano_yuki@example.com</td>\n",
-       "      <td>F</td>\n",
-       "      <td>63</td>\n",
-       "      <td>1956/1/2</td>\n",
-       "      <td>茨城県</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>AS345469</td>\n",
-       "      <td>鶴岡 薫</td>\n",
-       "      <td>2019-01-01 04:48:22</td>\n",
-       "      <td>つるおか かおる</td>\n",
-       "      <td>tsuruoka_kaoru@example.com</td>\n",
-       "      <td>M</td>\n",
-       "      <td>74</td>\n",
-       "      <td>1945/3/25</td>\n",
-       "      <td>東京都</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>GD892565</td>\n",
-       "      <td>大内 高史</td>\n",
-       "      <td>2019-01-01 04:54:51</td>\n",
-       "      <td>おおうち たかし</td>\n",
-       "      <td>oouchi_takashi@example.com</td>\n",
-       "      <td>M</td>\n",
-       "      <td>54</td>\n",
-       "      <td>1965/8/5</td>\n",
-       "      <td>千葉県</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  customer_id customer_name    registration_date customer_name_kana  \\\n",
-       "0    IK152942        平田 裕次郎  2019-01-01 00:25:33          ひらた ゆうじろう   \n",
-       "1    TS808488         田村 詩織  2019-01-01 01:13:45            たむら しおり   \n",
-       "2    AS834628         久野 由樹  2019-01-01 02:00:14             ひさの ゆき   \n",
-       "3    AS345469          鶴岡 薫  2019-01-01 04:48:22           つるおか かおる   \n",
-       "4    GD892565         大内 高史  2019-01-01 04:54:51           おおうち たかし   \n",
-       "\n",
-       "                         email gender  age      birth pref  \n",
-       "0  hirata_yuujirou@example.com      M   29  1990/6/10  石川県  \n",
-       "1    tamura_shiori@example.com      F   33  1986/5/20  東京都  \n",
-       "2      hisano_yuki@example.com      F   63   1956/1/2  茨城県  \n",
-       "3   tsuruoka_kaoru@example.com      M   74  1945/3/25  東京都  \n",
-       "4   oouchi_takashi@example.com      M   54   1965/8/5  千葉県  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/t1/cm12lwy17mgbt4nkxr4_csj40000gn/T/ipykernel_21352/16942028.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcustomer_master\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'customer_master.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m# Dataframeのドキュメントhttps://pandas.pydata.org/pandas-docs/stable/reference/frame.html\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mcustomer_master\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
     }
    ],
    "source": [
