--- a/ch01/ch01-note.ipynb
+++ b/ch01/ch01-note.ipynb
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "20bffb36",
+   "id": "08f169f7",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5330a02a",
+   "id": "71b8ccaf",
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0654594f",
+   "id": "afcbf8b0",
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ae054735",
+   "id": "630ffd5a",
    "metadata": {},
    "outputs": [
     {
@@ -729,6 +729,7 @@
     "# ノック3 売り上げデータ同志の結合\n",
     "# left joinさせる\n",
     "# transaction_idが一致するデータでジョインする。 payment_data, customer_idを追加する\n",
+    "#  ジョインするデータのジョインキーに重複データが存在している場合件数が増えるので注意が必要\n",
     "join_data = pd.merge(transaction_detail, transaction[[\"transaction_id\", \"payment_date\", \"customer_id\"]], on=\"transaction_id\", how=\"left\")\n",
     "join_data.head()"
    ]
@@ -736,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2291f8d8",
+   "id": "d7565620",
    "metadata": {},
    "outputs": [
     {
@@ -757,11 +758,209 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "a36f41b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>detail_id</th>\n",
+       "      <th>transaction_id</th>\n",
+       "      <th>item_id</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>payment_date</th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>customer_name</th>\n",
+       "      <th>registration_date</th>\n",
+       "      <th>customer_name_kana</th>\n",
+       "      <th>email</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>age</th>\n",
+       "      <th>birth</th>\n",
+       "      <th>pref</th>\n",
+       "      <th>item_name</th>\n",
+       "      <th>item_price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>T0000000113</td>\n",
+       "      <td>S005</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2019-02-01 01:36:57</td>\n",
+       "      <td>PL563502</td>\n",
+       "      <td>井本 芳正</td>\n",
+       "      <td>2019-01-07 14:34:35</td>\n",
+       "      <td>いもと よしまさ</td>\n",
+       "      <td>imoto_yoshimasa@example.com</td>\n",
+       "      <td>M</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1989/7/15</td>\n",
+       "      <td>熊本県</td>\n",
+       "      <td>PC-E</td>\n",
+       "      <td>210000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>T0000000114</td>\n",
+       "      <td>S001</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2019-02-01 01:37:23</td>\n",
+       "      <td>HD678019</td>\n",
+       "      <td>三船 六郎</td>\n",
+       "      <td>2019-01-27 18:00:11</td>\n",
+       "      <td>みふね ろくろう</td>\n",
+       "      <td>mifune_rokurou@example.com</td>\n",
+       "      <td>M</td>\n",
+       "      <td>73</td>\n",
+       "      <td>1945/11/29</td>\n",
+       "      <td>京都府</td>\n",
+       "      <td>PC-A</td>\n",
+       "      <td>50000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>T0000000115</td>\n",
+       "      <td>S003</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2019-02-01 02:34:19</td>\n",
+       "      <td>HD298120</td>\n",
+       "      <td>山根 小雁</td>\n",
+       "      <td>2019-01-11 08:16:02</td>\n",
+       "      <td>やまね こがん</td>\n",
+       "      <td>yamane_kogan@example.com</td>\n",
+       "      <td>M</td>\n",
+       "      <td>42</td>\n",
+       "      <td>1977/5/17</td>\n",
+       "      <td>茨城県</td>\n",
+       "      <td>PC-C</td>\n",
+       "      <td>120000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>T0000000116</td>\n",
+       "      <td>S005</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2019-02-01 02:47:23</td>\n",
+       "      <td>IK452215</td>\n",
+       "      <td>池田 菜摘</td>\n",
+       "      <td>2019-01-10 05:07:38</td>\n",
+       "      <td>いけだ なつみ</td>\n",
+       "      <td>ikeda_natsumi@example.com</td>\n",
+       "      <td>F</td>\n",
+       "      <td>47</td>\n",
+       "      <td>1972/3/17</td>\n",
+       "      <td>兵庫県</td>\n",
+       "      <td>PC-E</td>\n",
+       "      <td>210000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>T0000000117</td>\n",
+       "      <td>S002</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2019-02-01 04:33:46</td>\n",
+       "      <td>PL542865</td>\n",
+       "      <td>栗田 憲一</td>\n",
+       "      <td>2019-01-25 06:46:05</td>\n",
+       "      <td>くりた けんいち</td>\n",
+       "      <td>kurita_kenichi@example.com</td>\n",
+       "      <td>M</td>\n",
+       "      <td>74</td>\n",
+       "      <td>1944/12/17</td>\n",
+       "      <td>長崎県</td>\n",
+       "      <td>PC-B</td>\n",
+       "      <td>85000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   detail_id transaction_id item_id  quantity         payment_date  \\\n",
+       "0          0    T0000000113    S005         1  2019-02-01 01:36:57   \n",
+       "1          1    T0000000114    S001         1  2019-02-01 01:37:23   \n",
+       "2          2    T0000000115    S003         1  2019-02-01 02:34:19   \n",
+       "3          3    T0000000116    S005         1  2019-02-01 02:47:23   \n",
+       "4          4    T0000000117    S002         2  2019-02-01 04:33:46   \n",
+       "\n",
+       "  customer_id customer_name    registration_date customer_name_kana  \\\n",
+       "0    PL563502         井本 芳正  2019-01-07 14:34:35           いもと よしまさ   \n",
+       "1    HD678019         三船 六郎  2019-01-27 18:00:11           みふね ろくろう   \n",
+       "2    HD298120         山根 小雁  2019-01-11 08:16:02            やまね こがん   \n",
+       "3    IK452215         池田 菜摘  2019-01-10 05:07:38            いけだ なつみ   \n",
+       "4    PL542865         栗田 憲一  2019-01-25 06:46:05           くりた けんいち   \n",
+       "\n",
+       "                         email gender  age       birth pref item_name  \\\n",
+       "0  imoto_yoshimasa@example.com      M   30   1989/7/15  熊本県      PC-E   \n",
+       "1   mifune_rokurou@example.com      M   73  1945/11/29  京都府      PC-A   \n",
+       "2     yamane_kogan@example.com      M   42   1977/5/17  茨城県      PC-C   \n",
+       "3    ikeda_natsumi@example.com      F   47   1972/3/17  兵庫県      PC-E   \n",
+       "4   kurita_kenichi@example.com      M   74  1944/12/17  長崎県      PC-B   \n",
+       "\n",
+       "   item_price  \n",
+       "0      210000  \n",
+       "1       50000  \n",
+       "2      120000  \n",
+       "3      210000  \n",
+       "4       85000  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ノック4 マスターデータを結合(ジョイン)する\n",
+    "# 付加したいデータ\n",
+    "# cutomer_master item_masterに含まれるデータ全て\n",
+    "# 共通するデータ列は、customer_id item_idで紐付け可能\n",
+    "\n",
+    "# customer_masterの結合\n",
+    "join_data = pd.merge(join_data, customer_master, on=\"customer_id\", how=\"left\")\n",
+    "\n",
+    "# item_masterの結合\n",
+    "join_data = pd.merge(join_data, item_master, on=\"item_id\", how=\"left\")\n",
+    "\n",
+    "# 結合した結果、売り上げpriceが落ちてしまったので売り上げを計算する必要がある\n",
+    "join_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "f4416210",
+   "id": "a9e66b19",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# ノック5 必要なデータ列を作る"
+   ]
   }
  ],
  "metadata": {
