--- a/ch01/ch01-note.ipynb
+++ b/ch01/ch01-note.ipynb
@@ -954,13 +954,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "a9e66b19",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>item_price</th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>210000</td>\n",
+       "      <td>210000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>50000</td>\n",
+       "      <td>50000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>120000</td>\n",
+       "      <td>120000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>210000</td>\n",
+       "      <td>210000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>85000</td>\n",
+       "      <td>170000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   quantity  item_price   price\n",
+       "0         1      210000  210000\n",
+       "1         1       50000   50000\n",
+       "2         1      120000  120000\n",
+       "3         1      210000  210000\n",
+       "4         2       85000  170000"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# ノック5 必要なデータ列を作る"
+    "# ノック5 必要なデータ列を作る\n",
+    "# 売り上げ列を作るには、quantityとitem_priceの掛け算で計算できる。\n",
+    "# join_dataにprice列を追加する\n",
+    "join_data[\"price\"] = join_data[\"quantity\"] * join_data[\"item_price\"]\n",
+    "\n",
+    "# 特定の列だけ表示\n",
+    "join_data[[\"quantity\", \"item_price\", \"price\"]].head()\n",
+    "\n",
+    "# これで一通りのデータ加工が完了\n",
+    "# データ加工の集計ミスに注意\n",
+    "# 結合するときに件数の確認などは行うことを心がける"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd897955",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
